--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,6 +5,6 @@
 <%= link_to "delete", article_path(@article), method: :delete, 
 	data: {confirm: "Are you sure you'd like to delete this article?"} %>
 
-<h3>Comments:</h3>
+<h3>Comments (<%= @article.comments.size %>)</h3>
 <%= render partial: 'articles/comment', collection: @article.comments %>
 <%= render partial: 'comments/form' %>
